[TASK] add .env variables as an environment variables in doc.-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,16 +25,22 @@ services:
       - t3kit_solr
     volumes:
       - ./docker_conf:/docker_conf${CACHED}
-      - ./vendor/t3kit/db:/t3kit_db${CACHED}
       - .:/var/www/html${CACHED}
       - /var/www/html/web/typo3temp
     environment:
       - USERID=${WEB_USERID}
       - GROUPID=${WEB_GROUPID}
+
       - WEB_CONTAINER_NAME=${WEB_CONTAINER_NAME}
-      - DB_CONTAINER_NAME=${DB_CONTAINER_NAME}
       - SOLR_CONTAINER_NAME=${SOLR_CONTAINER_NAME}
       - MAILHOG_CONTAINER_NAME=${MAILHOG_CONTAINER_NAME}
+
+      - DB_CONTAINER_NAME=${DB_CONTAINER_NAME}
+      - DB_NAME=${DB_NAME}
+      - DB_USER=${DB_USER}
+      - DB_PASSWORD=${DB_PASSWORD}
+      - DB_ROOT_PASSWORD=${DB_ROOT_PASSWORD}
+
     command: "sh /docker_conf/run.sh"
 
   t3kit_solr:
