--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,8 @@
   "require": {
     "t3kit/theme-t3kit": "~2.6.0",
     "typo3-ter/url-forwarding": "~1.2.0",
-    "pixelant/dashboard": "~8.0.0"
+    "pixelant/dashboard": "~8.0.0",
+    "georgringer/gdpr": "dev-master"
   },
   "require-dev": {
     "t3kit/db": "~2.6.0",
