--- a/composer.json
+++ b/composer.json
@@ -39,7 +39,7 @@
   "prefer-stable": true,
   "require": {
     "t3kit/theme-t3kit": "~2.7.0",
-    "typo3-ter/url-forwarding": "~1.2.0",
+    "typo3-ter/url-forwarding": "^1.2.0",
     "pixelant/dashboard": "~8.0.0",
     "kaystrobach/dyncss": "dev-master as 0.8.0"
   },
