--- a/composer.json
+++ b/composer.json
@@ -92,7 +92,7 @@
     "friendsoftypo3/typo3db-legacy": "^1.1.1"
   },
   "require-dev": {
-    "t3kit/db": "~2.7.0",
+    "t3kit/db": "dev-t3kit8typo39",
     "behat/behat": "^3.3.0",
     "behat/mink-extension": "~2.2",
     "behat/mink-goutte-driver": "~1.2.1",
