--- a/composer.json
+++ b/composer.json
@@ -38,6 +38,10 @@
     {
       "type": "git",
       "url": "https://github.com/TYPO3-Solr/ext-solr"
+    },
+    {
+      "type": "git",
+      "url": "https://github.com/t3kit/typo3-realurl"
     }
   ],
   "minimum-stability": "dev",
@@ -89,7 +93,8 @@
     "georgringer/news": "dev-master",
     "t3kit/theme-t3kit": "dev-9testloc",
     "friendsoftypo3/cms-func": "^9.0.1",
-    "friendsoftypo3/typo3db-legacy": "^1.1.1"
+    "friendsoftypo3/typo3db-legacy": "^1.1",
+    "dmitryd/typo3-realurl": "dev-typo3-v9"
   },
   "require-dev": {
     "t3kit/db": "dev-t3kit8typo39",
