--- a/composer.json
+++ b/composer.json
@@ -102,7 +102,7 @@
     "pixelant/pxa-newsletter-subscription": "dev-typo3-v9"
   },
   "require-dev": {
-    "t3kit/db": "dev-t3kit8typo39",
+    "t3kit/db": "dev-master",
     "behat/behat": "^3.3.0",
     "behat/mink-extension": "~2.2",
     "behat/mink-goutte-driver": "~1.2.1",
