--- a/composer.json
+++ b/composer.json
@@ -33,25 +33,18 @@
     },
     {
       "type": "git",
-      "url": "https://github.com/georgringer/news"
+      "url": "https://github.com/t3kit/typo3-realurl"
     },
     {
       "type": "git",
-      "url": "https://github.com/TYPO3-Solr/ext-solr"
-    },
-    {
-      "type": "git",
-      "url": "git@github.com:pixelant/pxa_newsletter_subscription.git"
-    },
-    {
-      "type": "git",
-      "url": "https://github.com/pixelant/pxa_cookie_bar.git"
+      "url": "https://github.com/t3kit/themes"
     }
   ],
   "minimum-stability": "dev",
   "prefer-stable": true,
   "require": {
     "php": "^7.2",
+
     "typo3/cms-backend": "~9.5.1",
     "typo3/cms-core": "~9.5.1",
     "typo3/cms-extbase": "~9.5.1",
@@ -61,6 +54,7 @@
     "typo3/cms-frontend": "~9.5.1",
     "typo3/cms-install": "~9.5.1",
     "typo3/cms-recordlist": "~9.5.1",
+
     "typo3/cms-about": "~9.5.1",
     "typo3/cms-adminpanel": "~9.5.1",
     "typo3/cms-belog": "~9.5.1",
@@ -70,7 +64,6 @@
     "typo3/cms-impexp": "~9.5.1",
     "typo3/cms-info": "~9.5.1",
     "typo3/cms-lowlevel": "~9.5.1",
-    "typo3/cms-opendocs": "~9.5.1",
     "typo3/cms-recycler": "~9.5.1",
     "typo3/cms-redirects": "~9.5.1",
     "typo3/cms-reports": "~9.5.1",
@@ -80,26 +73,31 @@
     "typo3/cms-setup": "~9.5.1",
     "typo3/cms-tstemplate": "~9.5.1",
     "typo3/cms-viewpage": "~9.5.1",
-    "typo3/cms-feedit": "~9.5.1",
+    "typo3/cms-rsaauth": "~9.5.1",
+
+    "typo3/cms-t3editor": "~9.5.1",
     "typo3/cms-felogin": "~9.5.1",
     "typo3/cms-filemetadata": "~9.5.1",
+    "typo3/cms-sys-note": "~9.5.1",
+
+    "typo3/cms-feedit": "~9.5.1",
     "typo3/cms-indexed-search": "~9.5.1",
     "typo3/cms-linkvalidator": "~9.5.1",
-    "typo3/cms-rsaauth": "~9.5.1",
+    "typo3/cms-opendocs": "~9.5.1",
     "typo3/cms-sys-action": "~9.5.1",
-    "typo3/cms-sys-note": "~9.5.1",
-    "typo3/cms-t3editor": "~9.5.1",
     "typo3/cms-taskcenter": "~9.5.1",
     "typo3/cms-workspaces": "~9.5.1",
+
     "helhum/typo3-console": "^5.6.0",
     "doctrine/lexer": "^1.0",
     "doctrine/common": "^2.9",
-    "georgringer/news": "dev-master",
-    "t3kit/theme-t3kit": "dev-9testloc",
     "friendsoftypo3/cms-func": "^9.0.1",
     "friendsoftypo3/typo3db-legacy": "^1.1.1",
-    "typo3-ter/pxa-cookie-bar": "~2.1.0",
-    "pixelant/pxa-newsletter-subscription": "dev-typo3-v9"
+
+    "dmitryd/typo3-realurl": "dev-typo3-v9",
+    "typo3-themes/themes": "dev-typo3_9.x",
+
+    "t3kit/theme-t3kit": "dev-master"
   },
   "require-dev": {
     "t3kit/db": "dev-master",
