--- a/composer.json
+++ b/composer.json
@@ -30,6 +30,10 @@
     {
       "type": "git",
       "url": "https://github.com/t3kit/themes"
+    },
+    {
+      "type": "git",
+      "url": "git@github.com:pixelant/gridelements.git"
     }
   ],
   "minimum-stability": "dev",
