--- a/composer.json
+++ b/composer.json
@@ -34,6 +34,14 @@
     {
       "type": "git",
       "url": "https://github.com/t3kit/themes"
+    },
+    {
+      "type": "git",
+      "url": "https://github.com/t3kit/TYPO3.dyncss"
+    },
+    {
+      "type": "git",
+      "url": "https://github.com/t3kit/TYPO3.dyncss_less"
     }
   ],
   "minimum-stability": "dev",
@@ -93,6 +101,8 @@
     "dmitryd/typo3-realurl": "dev-typo3-v9",
     "typo3-themes/themes": "dev-typo3_9.x",
     "svewap/realurl-404-multilingual": "dev-typo3-v9",
+    "kaystrobach/dyncss": "dev-typo3_9.x",
+    "kaystrobach/dyncss-less": "dev-typo3_9.x",
 
     "t3kit/theme-t3kit": "dev-master"
   },
