[TASK] Make www-data user configurable via env.

--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,7 @@ WEB_PORT=8888
 WEB_IMAGE=t3kit/ubuntu18.04-php7.2-apache:0.1.0
 WEB_USERID=1001
 WEB_GROUPID=1001
+WEB_USER_WWWDATA=www-data
 
 
 #===== Solr =====
