--- a/web/typo3conf/sites/global/route-enhancers-news.yaml
+++ b/web/typo3conf/sites/global/route-enhancers-news.yaml
@@ -31,26 +31,9 @@ routeEnhancers:
           - locale: 'sv_SE.*'
             value: 'arkiv'
       year:
-        type: StaticValueMapper
-        map:
-          2005: 2005
-          2006: 2006
-          2007: 2007
-          2008: 2008
-          2009: 2009
-          2010: 2010
-          2011: 2011
-          2012: 2012
-          2013: 2013
-          2014: 2014
-          2015: 2015
-          2016: 2016
-          2017: 2017
-          2018: 2018
-          2019: 2019
-          2020: 2020
-          2021: 2021
-          2022: 2022
+        type: StaticRangeMapper
+        start: '2000'
+        end: '2050'
       month:
         type: StaticValueMapper
         map:
