--- a/composer.json
+++ b/composer.json
@@ -97,7 +97,7 @@
     "t3kit/theme-t3kit": "dev-master"
   },
   "require-dev": {
-    "t3kit/db": "~2.8.0",
+    "t3kit/db": "dev-master",
     "behat/behat": "^3.3.0",
     "behat/mink-extension": "~2.2",
     "behat/mink-goutte-driver": "~1.2.1",
