--- a/composer.json
+++ b/composer.json
@@ -93,10 +93,10 @@
     "kaystrobach/dyncss": "dev-typo3_9.x",
     "kaystrobach/dyncss-less": "dev-typo3_9.x",
 
-    "t3kit/theme-t3kit": "dev-master"
+    "t3kit/theme-t3kit": "~2.10.0"
   },
   "require-dev": {
-    "t3kit/db": "dev-master",
+    "t3kit/db": "~2.9.0",
     "behat/behat": "^3.3.0",
     "behat/mink-extension": "~2.2",
     "behat/mink-goutte-driver": "~1.2.1",
