--- a/typoscript-lint.yml
+++ b/typoscript-lint.yml
@@ -8,3 +8,6 @@ sniffs:
       indentPerLevel: 2
   - class: RepeatingRValue
     disabled: true
+  - class: NestingConsistency
+    parameters:
+      commonPathPrefixThreshold: 2
