[TASK] add a possibility to use web docker image with php7.3

--- a/.env.mac.example
+++ b/.env.mac.example
@@ -13,6 +13,7 @@ DB_ROOT_PASSWORD=1234
 WEB_CONTAINER_NAME=web
 WEB_PORT=8888
 WEB_IMAGE=t3kit/ubuntu18.04-php7.2-apache:0.1.0
+# WEB_IMAGE=t3kit/8.9-php7.3-apache2.4-ubuntu18.04:1.0.1
 WEB_USERID=501
 WEB_GROUPID=20
 WEB_USER_WWWDATA=www-data
