--- a/composer.json
+++ b/composer.json
@@ -24,14 +24,21 @@
     "docs": "https://github.com/t3kit/t3kit"
   },
   "require": {
-    "typo3/minimal": "^10.1.0",
-
-    "typo3/cms-form": "^10.1.0",
-    "typo3/cms-rte-ckeditor": "^10.1.0",
-    "typo3/cms-seo": "^10.1.0",
-    "typo3/cms-tstemplate": "^10.1.0",
-    "typo3/cms-felogin": "^10.1.0",
-    "typo3/cms-indexed-search": "^10.1.0"
+    "typo3/cms-backend": "dev-master",
+    "typo3/cms-core": "dev-master",
+    "typo3/cms-extbase": "dev-master",
+    "typo3/cms-extensionmanager": "dev-master",
+    "typo3/cms-filelist": "dev-master",
+    "typo3/cms-fluid": "dev-master",
+    "typo3/cms-frontend": "dev-master",
+    "typo3/cms-install": "dev-master",
+    "typo3/cms-recordlist": "dev-master",
+    "typo3/cms-form": "dev-master",
+    "typo3/cms-rte-ckeditor": "dev-master",
+    "typo3/cms-seo": "dev-master",
+    "typo3/cms-tstemplate": "dev-master",
+    "typo3/cms-felogin": "dev-master",
+    "typo3/cms-indexed-search": "dev-master"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^3.4",
