--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "lint-js": "standard -v 'theme/src/js/**/*.js' | snazzy",
     "lint-config": "standard -v 'theme/config/**/*.js' | snazzy",
     "lint-css": "stylelint 'theme/src/styles/**/*.{css,scss}' --cache --cache-location .cache/.stylelintcache",
-    "lint-all": "npm-run-all --parallel lint-config",
+    "lint-editorconfig": "eclint check '**/*.{sh,yml,yaml,json,xml,xlf,html}' '!Resources/Public/**/*'",
     "lint-fix": "stylelint 'theme/src/styles/**/*.{css,scss}' --fix",
-    "test": "lint-all",
+    "test": "npm-run-all --parallel lint-config lint-editorconfig",
     "dev": "gulp -f theme/config/gulpfile.js build",
     "prod": "NODE_ENV=production gulp -f theme/config/gulpfile.js build",
     "build": "npm-run-all --parallel dev prod",
@@ -31,6 +31,7 @@
     "cssnano": "^4.1.10",
     "del": "^5.1.0",
     "dotenv": "^8.0.0",
+    "eclint": "^2.8.1",
     "fibers": "^4.0.2",
     "gulp": "^4.0.2",
     "gulp-brotli": "^2.0.2",
