[TEST] update github actions config

--- a/.github/workflows/code-guidelines.yml
+++ b/.github/workflows/code-guidelines.yml
@@ -4,26 +4,47 @@ name: Code Guidelines
 on: [push, pull_request]
 
 jobs:
-  build:
 
-    name: Lint code
 
-    runs-on: ubuntu-18.04
+  build-composer:
+    name: Run Composer lint
+    runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v1
+      - uses: actions/checkout@v2
 
-      - run: npm install
+      - name: Validate composer.json and composer.lock
+        run: composer validate
 
-      - name: Run default npm tests
+      - name: Composer version
+        run: composer --version
+
+      - name: Install Composer dependencies
+        run: composer install --prefer-dist --no-progress --no-suggest
+
+      - name: Run default Composer lint tests
+        run: composer run-script test
+
+
+  build-npm:
+    name: Run npm lint
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version: [12.x]
+
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v1
+        with:
+          node-version: ${{ matrix.node-version }}
+
+      - name: node & npm version
+        run: |
+          node -v
+          npm -v
+
+      - name: Run default npm lint tests
         run: npm test
-
-      - name: Install t3kit Composer dependencies
-        uses: docker://composer:1.9
-        with:
-          args: "install"
-
-      - name: Run default Composer tests
-        uses: docker://composer:1.9
-        with:
-          args: "run-script test"
