--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "dotenv": "^8.2.0",
     "eclint": "^2.8.1",
     "fibers": "^4.0.2",
+    "fs-extra": "^8.1.0",
     "gulp": "^4.0.2",
     "gulp-brotli": "^2.0.2",
     "gulp-gzip": "^1.4.2",
