--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@rollup/plugin-node-resolve": "^6.0.0",
     "app-root-path": "^3.0.0",
     "autoprefixer": "^9.7.4",
+    "boxen": "^4.2.0",
     "browser-sync": "^2.26.7",
     "browserslist": "^4.8.6",
     "cssnano": "^4.1.10",
@@ -54,6 +55,7 @@
     "rollup-plugin-sizes": "^1.0.1",
     "rollup-plugin-terser": "^5.2.0",
     "sass": "^1.25.0",
+    "semver": "^7.1.3",
     "snazzy": "^8.0.0",
     "standard": "^14.3.1",
     "stylelint": "^13.1.0",
@@ -61,6 +63,9 @@
     "stylelint-scss": "^3.14.2"
   },
   "peerDependencies": {},
+  "engines": {
+    "node": ">=12.16.0"
+  },
   "browserslist": [
     "> 1.6% and last 2 versions",
     "IOS >= 12 and > 0.5%"
