[TEST] add typoscript-lint tool

--- a/typoscript-lint.yml
+++ b/typoscript-lint.yml
@@ -8,6 +8,8 @@ sniffs:
       indentPerLevel: 2
   - class: RepeatingRValue
     disabled: true
+  - class: DeadCode
+    disabled: true
   - class: NestingConsistency
     parameters:
       commonPathPrefixThreshold: 2
