--- a/package.json
+++ b/package.json
@@ -22,28 +22,28 @@
     "start": "gulp -f theme/config/gulpfile.js"
   },
   "dependencies": {
-    "bootstrap": "4.4.1",
+    "bootstrap": "github:twbs/bootstrap#06c3c14",
     "bootstrap-icons": "1.0.0-alpha3",
     "jquery": "3.4.1",
     "popper.js": "1.16.0",
-    "simplelightbox": "2.1.4"
+    "simplelightbox": "~2.1.5"
   },
   "devDependencies": {
     "@rollup/plugin-legacy": "^2.0.0",
-    "@rollup/plugin-node-resolve": "^6.0.0",
+    "@rollup/plugin-node-resolve": "^7.1.3",
     "app-root-path": "^3.0.0",
-    "autoprefixer": "^9.7.4",
+    "autoprefixer": "^9.7.6",
     "boxen": "^4.2.0",
     "browser-sync": "^2.26.7",
-    "browserslist": "^4.8.6",
-    "chalk": "^3.0.0",
+    "browserslist": "^4.12.0",
+    "chalk": "^4.0.0",
     "cpy": "8.1.0",
     "cssnano": "^4.1.10",
     "del": "^5.1.0",
     "dotenv": "^8.2.0",
     "eclint": "^2.8.1",
-    "fibers": "^4.0.2",
-    "fs-extra": "^8.1.0",
+    "fibers": "^5.0.0",
+    "fs-extra": "^9.0.0",
     "git-rev-sync": "^2.0.0",
     "gulp": "^4.0.2",
     "gulp-brotli": "^2.0.2",
@@ -53,24 +53,24 @@
     "gulp-real-favicon": "^0.3.2",
     "gulp-rev": "^9.0.0",
     "gulp-rev-delete-original": "^0.2.3",
-    "gulp-sass": "^4.0.2",
+    "gulp-sass": "^4.1.0",
     "gulp-size": "^3.0.0",
     "gulp-sourcemaps": "^2.6.5",
-    "husky": "^4.2.3",
+    "husky": "^4.2.5",
     "js-yaml": "^3.13.1",
-    "nodemon": "^2.0.2",
+    "nodemon": "^2.0.3",
     "npm-run-all": "^4.1.5",
-    "rollup": "^1.19.3",
-    "rollup-plugin-filesize": "^6.2.1",
-    "rollup-plugin-sizes": "^1.0.1",
-    "rollup-plugin-terser": "^5.2.0",
-    "sass": "^1.25.0",
-    "semver": "^7.1.3",
+    "rollup": "~2.7.5",
+    "rollup-plugin-filesize": "^7.0.0",
+    "rollup-plugin-sizes": "^1.0.2",
+    "rollup-plugin-terser": "^5.3.0",
+    "sass": "^1.26.5",
+    "semver": "^7.3.2",
     "snazzy": "^8.0.0",
-    "standard": "^14.3.1",
-    "stylelint": "^13.1.0",
+    "standard": "^14.3.3",
+    "stylelint": "^13.3.3",
     "stylelint-config-standard-scss": "^1.1.0",
-    "stylelint-scss": "^3.14.2"
+    "stylelint-scss": "^3.17.1"
   },
   "peerDependencies": {},
   "engines": {
