--- a/package.json
+++ b/package.json
@@ -22,17 +22,15 @@
     "start": "gulp -f theme/config/gulpfile.js"
   },
   "dependencies": {
-    "bootstrap": "github:twbs/bootstrap#06c3c14",
-    "bootstrap-icons": "1.0.0-alpha3",
-    "jquery": "3.4.1",
-    "popper.js": "1.16.0",
-    "simplelightbox": "~2.1.5"
+    "bootstrap": "github:twbs/bootstrap#c9cd3e4",
+    "bootstrap-icons": "1.0.0-alpha4",
+    "simplelightbox": "~2.2.1"
   },
   "devDependencies": {
     "@rollup/plugin-legacy": "^2.0.0",
     "@rollup/plugin-node-resolve": "^7.1.3",
     "app-root-path": "^3.0.0",
-    "autoprefixer": "^9.7.6",
+    "autoprefixer": "^9.8.0",
     "boxen": "^4.2.0",
     "browser-sync": "^2.26.7",
     "browserslist": "^4.12.0",
@@ -57,20 +55,20 @@
     "gulp-size": "^3.0.0",
     "gulp-sourcemaps": "^2.6.5",
     "husky": "^4.2.5",
-    "js-yaml": "^3.13.1",
-    "nodemon": "^2.0.3",
+    "js-yaml": "^3.14.0",
+    "nodemon": "^2.0.4",
     "npm-run-all": "^4.1.5",
-    "rollup": "~2.7.5",
-    "rollup-plugin-filesize": "^7.0.0",
+    "rollup": "^2.10.9",
+    "rollup-plugin-filesize": "^9.0.0",
     "rollup-plugin-sizes": "^1.0.2",
-    "rollup-plugin-terser": "^5.3.0",
+    "rollup-plugin-terser": "^6.1.0",
     "sass": "^1.26.5",
     "semver": "^7.3.2",
     "snazzy": "^8.0.0",
-    "standard": "^14.3.3",
-    "stylelint": "^13.3.3",
+    "standard": "^14.3.4",
+    "stylelint": "^13.5.0",
     "stylelint-config-standard-scss": "^1.1.0",
-    "stylelint-scss": "^3.17.1"
+    "stylelint-scss": "^3.17.2"
   },
   "peerDependencies": {},
   "engines": {
