--- a/package.json
+++ b/package.json
@@ -23,11 +23,11 @@
     "start": "gulp -f theme/config/gulpfile.js"
   },
   "dependencies": {
-    "bootstrap": "github:twbs/bootstrap#4e9a29e",
-    "bootstrap-icons": "1.0.0-alpha4",
+    "bootstrap": "5.0.0-alpha2",
+    "bootstrap-icons": "1.0.0",
     "file-icon-vectors": "1.0.0",
-    "simplelightbox": "github:dmh/simplelightbox#619a4d2",
-    "swiper": "^6.3.3"
+    "simplelightbox": "2.4.0",
+    "swiper": "6.3.3"
   },
   "devDependencies": {
     "@rollup/plugin-legacy": "^2.0.0",
