--- a/package.json
+++ b/package.json
@@ -31,7 +31,6 @@
   "devDependencies": {
     "@rollup/plugin-node-resolve": "~11.1.0",
     "@rollup/plugin-replace": "~2.3.4",
-    "app-root-path": "~3.0.0",
     "boxen": "~5.0.0",
     "browserslist": "~4.16.1",
     "chalk": "~4.1.0",
@@ -56,6 +55,7 @@
     "rollup-plugin-sizes": "~1.0.3",
     "rollup-plugin-terser": "~7.0.2",
     "sass": "~1.32.4",
+    "semver": "~7.3.4",
     "snazzy": "~9.0.0",
     "standard": "~16.0.3",
     "stylelint": "~13.8.0",
